--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,8 @@ transformers==4.12.5
 datasets==1.16.1
 torchtext==0.11.0
 nltk==3.6.5
+
+torch~=1.10.0+cu111
+gensim~=4.1.2
+plotly~=5.5.0
+Pillow~=8.4.0
